# tinity

./: .gitignore  Cargo.toml  README.md  archivo.s  flake.nix  test.tir
src/: main.rs
src/binary/: elf.rs  mod.rs  symbol.rs
src/lexer/: token.rs
src/parser/: ast.rs  mod.rs  token.rs  types.rs
src/riscv/: decode.rs  immediate.rs  jmp.rs  mod.rs  register.rs  regs.rs  symbol.rs
